--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <head>
     <title>Pishgaman</title>
     <div class="Aydintech"> 
-      © 2021 Aydin tech 
+      پیشگامان
       <a href="https://sites.google.com/view/aydintech/">visit my google website</a></div>
     <p>Aydin made this</p>
     <div class="toolbar">
       <a class="aydin" href="index.html">Home</a>
-      <a href="https://github.com/Aydin-Coder/aydin">View Code</a>
-      <a href="https://aydin-coder.github.io/">reload</a>
+      <a href="https://github.com/Aydin-Coder/Pishgaman">View Code</a>
+      <a href="https://aydin-coder.github.io/Pishgaman/">reload</a>
     </div>
     <marquee behavior="scroll"> <font size="+10"> <a2> پیشگامان </a2> </font></marquee>
   </head>
   <body>
-    <div class="invisible">Aydin Website</div>
-    <div class="invisible">Aydin tech</div>
+    <div class="invisible"></div>
+    <div class="invisible"></div>
     <h1>Hi!I am Aydin!the creator of this website.here you can check out some games I made with Applab and Gamelab,facts about me,about this website and more.you can also see some presentations I have made.Enjoy!</h1>
     <p>....................</p>
     <h1>you can use the toolbar to go in different pages in my site.</h1>
