--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <head>
     <title>Pishgaman</title>
     <div class="Aydintech"> 
-      پیشگامان
-      <a href="https://sites.google.com/view/aydintech/">visit my google website</a></div>
+      پیشگامان</div>
     <p>Aydin made this</p>
     <div class="toolbar">
       <a class="aydin" href="index.html">Home</a>
