--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="style.css">
 <html>
   <head>
-    <title>Pishgaman</title>
+    <title>پیشگامان</title>
     <div class="Aydintech"> 
       پیشگامان</div>
     <p>Aydin made this</p>
