--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link href="Coder Logo.png" rel="icon" type="image/x-icon">
+<link href="Coder-Logo.png" rel="icon" type="image/x-icon">
 <link rel="stylesheet" href="style.css">
 <html>
   <head>
