--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>.</p>
     <style> 
       img{border-radius: 20px;}</style>
-    <img  src="Aydin.jpg" alt="My photo" width="150" height="140">
+    <img  src="Coder-Logo.png" alt="My photo" width="150" height="140">
     <h1>this is my photo</h1>
     <p>Aydin made this website.if you copy you are a realy bad person.</p>
     <h1>you can request a app or a game made for you in the contact area.</h1>
