--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="invisible"></div>
     <div class="invisible"></div>
-    <h1>Hi!I am Aydin!the creator of this website.here you can check out some games I made with Applab and Gamelab,facts about me,about this website and more.you can also see some presentations I have made.Enjoy!</h1>
+    <h1></h1>
     <p>....................</p>
     <h1>you can use the toolbar to go in different pages in my site.</h1>
     <p>..Aydin tech..</p>
@@ -25,8 +25,8 @@
     <p>.</p>
     <style> 
       img{border-radius: 20px;}</style>
-    <img  src="Coder-Logo.png" alt="My photo" width="150" height="140">
-    <h1>this is my photo</h1>
+    <img src="Coder-Logo.png" alt="Coder Logo" width="150" height="140">
+    <h1></h1>
     <p>Aydin made this website.if you copy you are a realy bad person.</p>
     <h1>you can request a app or a game made for you in the contact area.</h1>
     <p>.....................Aydin tech..................</p>
