--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="Coder-Logo.png" rel="icon" type="image/x-icon">
+    <link href="coderlogo.png" rel="icon" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>پیشگامان</title>
     <div class="Aydintech"> 
@@ -25,7 +25,7 @@
     <p>.</p>
     <style> 
       img{border-radius: 20px;}</style>
-    <img src="Coder-Logo.png" alt="Coder Logo" width="150" height="140">
+    <img src="coderlogo.png" alt="Coder Logo" width="150" height="140">
     <h1></h1>
     <p>Aydin made this website.if you copy you are a realy bad person.</p>
     <h1>you can request a app or a game made for you in the contact area.</h1>
