--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="toolbar">
       <a class="aydin" href="index.html">Home</a>
       <a href="members.html">Members</a>
+      <a href="projects.html">Projects</a>
       <a href="https://github.com/Aydin-Coder/Pishgaman">View Code</a>
       <a href="https://aydin-coder.github.io/Pishgaman/">reload</a>
 
