--- a/members.html
+++ b/members.html
@@ -15,6 +15,12 @@
       <a href="https://aydin-coder.github.io/Pishgaman/">reload</a>
     </div>
   </head>
+  <body>
+    <img src="Aydin.jpeg" alt="Aydin Ebrahimi" height="300" weight="300">
+    <img src="farzad.jpg" alt="Farzad Akbari" height="300" weight="300">
+    <img src="asadi.jpg" alt="Aydin Asadi" height="300" weight="300">
+    <img src="hajavi.jpg" alt="Mojtaba Hajavi" height="300" weight="300">
+         
 </html>
 
 
