--- a/members.html
+++ b/members.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <style> 
+      img{border-radius: 100px;}
+  </style>
   <head>
     <link href="coderlogo.png" rel="icon" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
