--- a/members.html
+++ b/members.html
@@ -21,9 +21,13 @@
   <body>
     <img src="Aydin.jpeg" alt="Aydin Ebrahimi" height="150" weight="150">
     <a2>Aydin Ebrahimi</a2> <h1>I like Coding with html and css and like making websites!<a href="https://www.aydin-coder.ir"> Visit my Website.</a></h1>
-    <img src="farzad.jpg" alt="Farzad Akbari" height="300" weight="300">
-    <img src="asadi.jpg" alt="Aydin Asadi" height="300" weight="300">
-    <img src="hajavi.jpg" alt="Mojtaba Hajavi" height="300" weight="300">
+    <p>...</p>
+    <img src="farzad.jpg" alt="Farzad Akbari" height="150" weight="150">
+    <a2>Farzad Akbari</a2> <h1>  <a href=""> </a></h1>
+    <img src="asadi.jpg" alt="Aydin Asadi" height="150" weight="150">
+    <a2>Aydin Asadi</a2> <h1>  <a href=""> </a></h1>
+    <img src="hajavi.jpg" alt="Mojtaba Hajavi" height="150" weight="150">
+    <a2>Mojtaba Hajavi</a2> <h1>  <a href=""> </a></h1>
          
 </html>
 
