--- a/members.html
+++ b/members.html
@@ -31,7 +31,7 @@
     <img src="hajavi.jpg" alt="Mojtaba Hajavi" height="150" weight="150">
     <a2>Mojtaba Hajavi</a2> <h1>  <a href=""> </a></h1>
     <p>.....</p>
-         
+  </body>       
 </html>
 
 
