--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="invisible"></div>
     <h1></h1>
     <p>....................</p>
-    <h1>you can use the toolbar to go in different pages in my site.</h1>
+    <h1>you can use the toolbar to go in different pages in our site.</h1>
     <p>..Aydin tech..</p>
-    <h1>I code apps and games and sites in applab,scratch and in weblab.you can contact me at the contact area on the toolbar.</h1>
+    <h1>.         </h1>
     <p>.</p>
     <style> 
       img{border-radius: 20px;}</style>
