--- a/index.html
+++ b/index.html
@@ -35,18 +35,16 @@
     <p>.....................Aydin tech..................</p>
     <h1>I also have a google site which you can visit using the hyper link in the top of the screen.</h1>
     <p>..........Aydin..........</p>
-    <h1>I have a scratch acount called Aydin88.you can see some apps and games of mine there!</h1>
-    <div><h1>I have a brother named Armin.he has a google website too!you can visit his google website by clicking <a href="https://sites.google.com/view/arminebrahimi/">here.</a></h1></div>
-    <p>Aydin.AydinAydin.AydinAydin.AydinAydin.Aydin</p>
-    <h1><div>you can contact me in <a href="https://aydin-coder.github.io/amail/">A-mail</a></div></h1>
-    <p>Aydin.AydinAydin.AydinAydin.AydinAydin.Aydin</p>
-    <h1>carin is one of my apps that is a smart computer that answers most of your questions and is made to help you in the Aydin computer.</h1>
-    <p>...Aydin...</p>
-    <h1>I code apps and games in applab.you can see some of these awesome apps in the games area.you can go to the Games area from the Games button in the toolbar.I have coded a bunch of games in scratch.I have a piano app that can play!</h1>
-    <p>..........Aydin..........</p>
-    <h1>I worked hard on this website.if you want to remix it,contact me first from the contact area or from gmail.
-      my gmail is:aydin.ebrahimi@gmail.com
-      you can also contact me from A-mail.A-mail is another website I made and it is made to be a blog or a contact center.</h1>
+    <h1>.</h1>
+    <div><h1>.</h1></div>
+    <p>...</p>
+    <h1><div>y...</a></div></h1>
+    <p>...</p>
+    <h1>...</h1>
+    <p>.........</p>
+    <h1>...............</h1>
+    <p>...............................</p>
+    <h1>I.......I.</h1>
     <p>...</p>
   <div class="row">
     <div class="column"><a2>AMA Studios</a2><h1>Join our Discord Server to help us Code!</h1><iframe src="https://discord.com/widget?id=847083899691466765&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>.</div>
